tests/tests/ui/column_type_int_on_string.stderr
error[E0277]: field type `std::string::String` is not compatible with the requested column storage `toasty::codegen_support::storage::tag::I64`
  --> tests/ui/column_type_int_on_string.rs:11:11
   |
11 |     name: String,
   |           ^^^^^^ incompatible Rust type for `#[column(type = ...)]`
   |
   = help: the trait `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::I64>` is not implemented for `std::string::String`
   = note: see `toasty::codegen_support::storage` for the compatibility table
help: the following other types implement trait `toasty::codegen_support::storage::CompatibleWith<Storage>`
  --> $WORKSPACE/crates/toasty/src/codegen_support/storage.rs
   |
   | impl CompatibleWith<tag::Text> for String {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::string::String` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::Text>`
   | impl CompatibleWith<tag::VarChar> for String {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `std::string::String` implements `toasty::codegen_support::storage::CompatibleWith<toasty::codegen_support::storage::tag::VarChar>`
note: required by a bound in `_check`
  --> tests/ui/column_type_int_on_string.rs:4:17
   |
 4 | #[derive(Debug, toasty::Model)]
   |                 ^^^^^^^^^^^^^ required by this bound in `_check`
...
11 |     name: String,
   |           ------ required by a bound in this function
   = note: this error originates in the derive macro `toasty::Model` (in Nightly builds, run with -Z macro-backtrace for more info)
